added hibernate details